# mrlfd_ros2

./: .gitignore  README.md
src/ctrl_bringup/: CMakeLists.txt  package.xml
src/ctrl_bringup/launch/: all_nodes.launch.py  my_nodes.launch.py  real.launch.py  sim_follow.launch.py  sim_follow_target.launch.py  sim_follow_unity_target.launch.py  sim_unity.launch.py  visual.launch.py
src/ctrl_bringup/worlds/: follow_target.sdf
src/ctrl_data/: package.xml  setup.cfg  setup.py
src/ctrl_data/ctrl_data/: franka_jacobian.py  manip_publisher.py  plot_rt_manip.py
src/ctrl_interfaces/: CMakeLists.txt  package.xml
src/ctrl_interfaces/msg/: FrankaJoints.msg  PosTarget.msg
src/ctrl_interfaces/srv/: MoveToPose.srv
src/ctrl_utils/: package.xml  setup.cfg  setup.py
src/ctrl_utils/ctrl_utils/: data_recorder.py  gripper_server.py  joints_publisher.py  move_to_start_server.py  unity_cmd_server.py
src/joints_ctrl/: CMakeLists.txt  package.xml
src/joints_ctrl/src/: joints_trajectory.cpp
src/real_ctrl/: package.xml  setup.cfg  setup.py
src/real_ctrl/real_ctrl/: follow_trajectory.py  follow_trajectory_v1.py  follow_trajectory_v2.py  follow_trajectory_v3.py  follow_unity_target.py  franka.py  move_to_pose.py  move_to_start.py  trajectory_to_start.py
src/sim_ctrl/: package.xml  setup.cfg  setup.py
src/sim_ctrl/sim_ctrl/: follow_target.py  follow_trajectory.py  move_to_pose.py  move_to_start.py  sim_follow.py
