<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctrl_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="loopc30@gmail.com">jiahao</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>panda_description</build_depend>
  <build_depend>panda_moveit_config</build_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
